# PolkaGuard

./: .gitignore  Cargo.toml  README.md  build.rs  test_exploit_report.md  test_exploit_report_generation.sh  test_polkaguard.sh  test_polkaguard_fork.sh
docs/: CONFIG.md  COST_IMPLEMENTATION.md  DEVELOPMENT.md  NETWORKS.md  POLKAVM_FORK_GUIDE.md  README.md  ZK_EXPLOIT_PROOFS.md
src/: fork.rs  main.rs
src/analyzer/: mod.rs
src/cli/: handler.rs  mod.rs
src/config/: mod.rs
src/deployment/: mod.rs  verifier_deployer.rs
src/linter/: mod.rs
src/models/: mod.rs
src/utils/: mod.rs
src/zk/: mod.rs  production_prover.rs  prover.rs  verifier.rs  witness.rs
src/zk/circuits/: best_practices.rs  compatibility.rs  exploit.rs  mod.rs  resources.rs  security.rs
