[package]
name = "polkaguard"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A CLI tool for analyzing Solidity smart contracts for PolkaVM compatibility"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
colored = "2.1"
indicatif = "0.17"
walkdir = "2.4"
regex = "1.10"
log = "0.4"
env_logger = "0.11"
async-trait = "0.1"
futures = "0.3"
reqwest = { version = "0.11", features = ["json"] }
tempfile = "3.10"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }

# ZK-proof dependencies
ark-ff = "0.4"
ark-ec = "0.4"
ark-poly = "0.4"
ark-std = "0.4"
ark-serialize = "0.4"
ark-relations = "0.4"
ark-r1cs-std = "0.4"
ark-snark = "0.4"
ark-groth16 = "0.4"
ark-bn254 = "0.4"
ark-crypto-primitives = "0.4"
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
rand_chacha = "0.3"

# Process management dependencies for PolkaVM fork mode
sysinfo = "0.30"
which = "6.0"
dirs = "5.0"