[package]
name = "polkaguard"
version = "0.5.0"
edition = "2021"
authors = ["Ronit Chawla <rtbchawla12@gmail.com>"]
description = "A comprehensive Rust CLI tool for analyzing Solidity smart contracts targeting PolkaVM deployment with zero-knowledge proof generation capabilities"
license = "MIT"
documentation = "https://github.com/rtb-12/PolkaGuard/tree/main/docs"
homepage = "https://github.com/rtb-12/PolkaGuard"
repository = "https://github.com/rtb-12/PolkaGuard"
readme = "README.md"
keywords = ["polkadot", "solidity", "smart-contracts", "zero-knowledge", "security"]
categories = ["command-line-utilities", "cryptography", "development-tools"]
exclude = [
    "test_*.sh",
    "test_*.md", 
    "contracts/*",
    "exploit_proofs/*",
    "test_reports/*",
    "polkaguard_fork/*",
    "target/*",
    ".git/*",
    ".github/*",
    "*.log",
    "*.tmp",
    "*.pvm",
    "polkaguard.json",
    ".polkaguard_fork.pid"
]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
colored = "2.1"
indicatif = "0.17"
walkdir = "2.4"
regex = "1.10"
log = "0.4"
env_logger = "0.11"
async-trait = "0.1"
futures = "0.3"
reqwest = { version = "0.11", features = ["json"] }
tempfile = "3.10"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }

# ZK-proof dependencies
ark-ff = "0.4"
ark-ec = "0.4"
ark-poly = "0.4"
ark-std = "0.4"
ark-serialize = "0.4"
ark-relations = "0.4"
ark-r1cs-std = "0.4"
ark-snark = "0.4"
ark-groth16 = "0.4"
ark-bn254 = "0.4"
ark-crypto-primitives = "0.4"
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
rand_chacha = "0.3"

# Process management dependencies for PolkaVM fork mode
sysinfo = "0.30"
which = "6.0"
dirs = "5.0"
signal-hook = "0.3"
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }
futures-util = "0.3"

# Ethereum deployment dependencies
ethers = { version = "2.0", features = ["rustls", "ws"] }
ethers-contract = "2.0"
ethers-providers = "2.0"
ethers-signers = "2.0"
ethers-core = "2.0"
ethers-solc = "2.0"
rpassword = "7.3"

[features]
default = []
production = []